# UpTraderTask

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  task_description.docx
config/: env_config.py  logger.py  settings.py  urls.py
tree_coded_menu/: admin.py  apps.py  models.py  views.py
tree_coded_menu/migrations/: 0001_initial.py
tree_coded_menu/templates/: index3.html
tree_coded_menu/templates/menu/: menu.html
tree_coded_menu/templatetags/: menu_tags.py
